2000-07-21  Mikhael Goikhman  migo@homemail.com

	* acinclude.m4:
	* configure.in:
	* todo-2.4:
	GNOME window manager hints are now on by default (--disable-gnome).
	Compiling with GNOME is now autoconfigured, this fixes "todo #159".
	Some tweaks to make 'configure --help' nicer.

	* fvwm/module_interface.c (do_execute_module):
	support [0-9.-] chars in module aliases

	* libs/XError.c:
	added #include <stdlib.h>

2000-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.21

2000-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	fixed memory leak
	fixed transient stacking bug
	(ResyncXStackingOrder):
	new function to synchronize X stacking order with internal stack ring

2000-06-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/module_interface.c:
	KillModule now supports optional alias parameter, so it is now
	possible to stop individual modules started by alias.

	* NEWS:
	* fvwm2.1:
	Documented KillModule additional parameter.
	Improved description of Module command.

2000-06-27  olicha  <olivier.chapuis@free.fr>

	* fvwm/placement.c (NEW_CLEVERPLACEMENT_CODE):
	Clever Placement try to be more clever

2000-06-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functions.c: patch by Christophe Martin - fixed $$ and $y

2000-06-19  Hippo

	* fvwm/module_interface.c: ExecuteCommandQueue is now reentrant and
	the Wait command now allows module command to work.

2000-06-15  Hippo

	* fvwm/functions.*: Removed undocumented command AddModuleConfig.
	* fvwm/modconf.*: Removed trailing newlines from module config lines.

2000-06-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (WindowShade):
	* fvwm/move_resize.c (Maximize):
	(resize_window):
	don't maximize/shade/resize iconified windows
	(Maximize):
	fixed normal geometry when window was maximized twice

2000-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):