@@ -152,6 +152,9 @@ Bob Woodside:
 StartsOnPage style, Stacking Order chain, new variable module packets,
 GSFR for the modules.
 
+Johannes Zellner:
+StrokeWidth option for StrokeFunc.
+
 
 Along with a cast of thousands (well, dozens) mentioned in old
 ChangeLog entries.  If you find your name below, please send an entry
