@@ -1,3 +1,10 @@
+2000-08-13  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/builtins.c
+	* fvwm/fvwm2.1
+	* AUTHORS
+	Applied J. Zellner <johannes@zellner.org> StrokeWidth patch
+	
 2000-07-21  Mikhael Goikhman  migo@homemail.com
 
 	* acinclude.m4:
